  from Harmonist.
+ Update wasm version to latest API.
+ Do not print rod of lightning message when no targets.
+ You can now use arrow keys in menus too. Backported from Harmonist.
+ Fix interaction between har-kar gauntlets and tiny harpies in a pathological
  case.
+ Improvements in character dump. Mainly ideas from Harmonist.

-----------------------------------------------------------------------------
v0.12.0 2018-12-19

Bugfix and minor improvements release:

+ Winged monsters produce wing flapping noise instead of footsteps noise, and
  there's a distinction between heavy and normal footsteps. This way you still
  cannot be sure what kind of monster it is, but you can have an idea.
+ Add a message when a monster falls asleep because of rod of sleeping or night
  magara.
+ Make fireball do a little more damage to account for the fact that it is
  somewhat more difficult to use than firebolt.
+ Fix colour scheme when there is no config file. Fix windows 8-colour scheme.
+ Fix spelling of “cyclops”.
+ Allow Page Up/Down as alternative scroll keys in log messages window.
+ Allow “z” and some other keys as alternatives to “.” to select target.
+ Make layout toggle automatically resize the window in Tk backend.

-----------------------------------------------------------------------------
v0.11.1 2018-11-29

Bugfix release:

+ Fix colour handling issue in replay for the termbox-go backend.
+ Get the starting log message back (it was removed during the dungeon
  structure overhaul).
+ Make replay exit properly with the termbox-go backend.

-----------------------------------------------------------------------------
v0.11.0 2018-11-28

Gameplay:

+ Overhaul of dungeon structure. The main dungeon is shortened to 8 levels,
  from Depth 1 to 8, and there are 3 optional levels as before, now from 9 to
  11. This is to make the game more coffee-break (as intended), and also more
  dense: each level now should feel more special. In particular,